Serialization no longer requires the image file

--- a/examples/serialize/index.html
+++ b/examples/serialize/index.html
@@ -10,10 +10,11 @@
   <body>
     <h1>Example</h1>
     <p>To run this example, run python -m SimpleHTTPServer from the root of the
-    project, then visit localhost:8000/examples</p>
-    <canvas id="canvas"></canvas>
+    project, then visit localhost:8000/examples/serialize</p>
+    <canvas id="canvas1"></canvas>
+    <canvas id="canvas2"></canvas>
     <br/><br/>
-    <button id="button">Click me</button>
+    <button id="button">Clone via JSON</button>
     <script src="bundle.js"></script>
   </body>
 </html>
