--- a/examples/serialize/index.html
+++ b/examples/serialize/index.html
@@ -8,7 +8,7 @@
     </style>
   </head>
   <body>
-    <h1>Example</h1>
+    <h1>Serialize</h1>
     <p>To run this example, run python -m SimpleHTTPServer from the root of the
     project, then visit localhost:8000/examples/serialize</p>
     <canvas id="canvas1"></canvas>
