--- a/examples/toggle/index.html
+++ b/examples/toggle/index.html
@@ -8,12 +8,11 @@
     </style>
   </head>
   <body>
-    <h1>Example</h1>
+    <h1>Toggle</h1>
     <p>To run this example, run python -m SimpleHTTPServer from the root of the
     project, then visit localhost:8000/examples/toggle</p>
     <canvas id="canvas"></canvas>
     <br/><br/>
-    <button id="button">Click me</button>
     <script src="bundle.js"></script>
   </body>
 </html>
