Add a reset button

--- a/examples/toggle/index.html
+++ b/examples/toggle/index.html
@@ -13,6 +13,7 @@
     project, then visit localhost:8000/examples/toggle</p>
     <canvas id="canvas"></canvas>
     <br/><br/>
+    <button id="reset">Reset</button>
     <script src="bundle.js"></script>
   </body>
 </html>
